--- a/src/app/components/not-shared/home/currency-item/currency-item.component.html
+++ b/src/app/components/not-shared/home/currency-item/currency-item.component.html
@@ -23,10 +23,10 @@
         </div>
     </div>
     <div class="flex justify-end items-start gap-1.5 flex-1">
-        <div class="flex pl-0.5 overflow-hidden text-ellipsis">
+        <div class="flex pl-0.5 overflow-hidden text-ellipsis mt-1">
             <div class="flex flex-col items-end justify-start">
-                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light w-full text-end font-byekan-plus text-2xs sm:text-xs md:text-base leading-6">{{currencyItem?.title}}</span>
-                <span class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs sm:text-sm {{currencyItem?.filterName === 'سکه در بورس' ? 'font-byekanp' : 'font-byekan-plus'}}">{{currencyItem?.shortedName}}</span>
+                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light w-full text-end text-2xs leading-3 sm:text-sm sm:leading-5 md:text-base font-bold">{{currencyItem?.title}}</span>
+                <span class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs leading-4.5 md:text-sm md:leading-5">{{currencyItem?.shortedName}}</span>
             </div>
         </div>
         <div class="flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
