--- a/src/app/components/not-shared/home/currency-item/currency-item.component.html
+++ b/src/app/components/not-shared/home/currency-item/currency-item.component.html
@@ -22,10 +22,10 @@
             <strong class="{{currencyItem?.groupName !== 'World_Market' ? 'opacity-100' : 'opacity-0'}} text-dark-text2 dark:text-light-text2 font-normal font-yekan text-2xs leading-3 mt-1">{{showCurrencyId === 0 ? 'تومان' : 'دلار'}}</strong>
         </div>
     </div>
-    <div class="flex justify-end items-start gap-1.5 flex-1">
+    <div class="flex justify-end items-start gap-1.5 flex-1 w-[55%]">
         <div class="flex pl-0.5 overflow-hidden text-ellipsis mt-1">
             <div class="flex flex-col items-end justify-start">
-                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light w-full text-end text-2xs leading-3 sm:text-sm sm:leading-5 md:text-base font-bold">{{currencyItem?.title}}</span>
+                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light w-full rtl text-2xs leading-3 sm:text-sm sm:leading-5 font-bold text-nowrap text-ellipsis">{{currencyItem?.title}}</span>
                 <span class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs leading-4.5 md:text-sm md:leading-5">{{currencyItem?.shortedName}}</span>
             </div>
         </div>
