--- a/src/app/components/not-shared/home/currency-item/currency-item.component.html
+++ b/src/app/components/not-shared/home/currency-item/currency-item.component.html
@@ -1,4 +1,4 @@
-<article (click)="onSelectItem()" [routerLink]="[currencyItem?.slugText]" class="min-h-[4.853rem] px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border md:hover:bg-light-hover md:hover:dark:bg-dark-hover hover:cursor-pointer">
+<article (click)="onSelectItem($event)" class="min-h-[4.853rem] px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border md:hover:bg-light-hover md:hover:dark:bg-dark-hover hover:cursor-pointer">
     <div class="justify-start items-center gap-1.5 w-[20%] hidden md:flex leading-5 font-normal text-sm">
         <i class="bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal text-xs"></i>
         <strong class="text-dark-text3 dark:text-light-text3 font-normal">اطلاعات بیشتر</strong>
@@ -36,13 +36,14 @@
                 <span *ngIf="currencyItem?.isFav" class="w-6 h-7" (click)="removeFromFav()">
                     <span class="relative">
                         <svg
+                            #starElement1
                             class="w-4 h-4 left-2 top-1.5 sm:top-3 fill-yellow-star absolute"
                             version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 288.259 288.259"
                             xml:space="preserve">
                             <g>
                                 <g>
-                                    <path d="M6.839,137.02l46.417,47.774l-8.028,68.045l-0.045,0.619c-0.33,8.836,2.138,16.25,7.129,21.429
+                                    <path #starElement2 d="M6.839,137.02l46.417,47.774l-8.028,68.045l-0.045,0.619c-0.33,8.836,2.138,16.25,7.129,21.429
                                         c7.104,7.374,18.707,8.866,30.214,3.677l61.621-33.545l61.099,33.281l0.518,0.264c4.637,2.087,9.201,3.148,13.579,3.148
                                         c6.484,0,12.39-2.428,16.63-6.825c4.991-5.179,7.46-12.593,7.13-21.429l-8.079-68.664l45.793-47.05l0.624-0.724
                                         c6.398-8.417,8.415-18.073,5.535-26.482c-2.884-8.409-10.395-14.8-20.611-17.524l-68.781-11.09l-29.99-60.339l-0.452-0.792
@@ -61,7 +62,7 @@
                         </svg>
                     </span>
                 </span>
-                <span *ngIf="!currencyItem?.isFav" class="w-6 h-7 flex justify-end items-center sm:items-end" (click)="addToFav()">
+                <span #starElement3 *ngIf="!currencyItem?.isFav" class="w-6 h-7 flex justify-end items-center sm:items-end" (click)="addToFav()">
                     <star-icon />
                 </span>
             </div>
