Currency home page completed

--- a/src/app/components/shared/star-icon/star-icon.component.html
+++ b/src/app/components/shared/star-icon/star-icon.component.html
@@ -1,5 +1,5 @@
 <svg
-    class="w-4 h-4 duration-500 transition {{selected ? 'fill-dark dark:fill-light' : 'fill-light-text2 dark:fill-dark-text2'}}"
+    class="w-full h-full duration-500 transition {{selected ? 'fill-dark dark:fill-light' : 'fill-light-text2 dark:fill-dark-text2'}}"
     version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 288.259 288.259"
     xml:space="preserve">
