--- a/src/styles.css
+++ b/src/styles.css
@@ -31,8 +31,8 @@
     --light-hover: #f1f5f4;
     --dark-hover: #1b1b1b;
 
-    --light-text: #fefffe;
-    ---dark-text: #222;
+    --light-text: #f2f2f2;
+    --dark-text: #222;
 
     --dark-highlight: #202020;
     --light-highlight: #e7ebea;
