--- a/src/app/components/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/shared/breadcrumb/breadcrumb.component.html
@@ -1,5 +1,5 @@
-<nav aria-label="breadcrumb" *ngIf="items?.length">
-    <ol class="flex flex-row-reverse list-none gap-2 p-0 m-0 text-sm">
+<nav aria-label="breadcrumb" class="leading-[180%] mb-6" *ngIf="items?.length">
+    <ol class="flex flex-row-reverse list-none p-0 m-0 text-sm">
         <li
             *ngFor="let item of items; let last = last"
             [attr.aria-current]="last ? 'page' : null"
