--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -1,6 +1,7 @@
 <main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 md:px-18 md:pb-8 md:pt-24 lg:pt-29 lg:px-41 lg:pb-16 flex-col md:flex-row-reverse flex-nowrap justify-between items-start">
     <div class="w-full md:w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
         <app-breadcrumb [items]="breadCrumbItems" />
+        <app-item-info [item]=currencyItem />
     </div>
 
     <div class="w-full md:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
