--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -1,9 +1,43 @@
 <main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 md:px-18 md:pb-8 md:pt-24 lg:pt-29 lg:px-41 lg:pb-16 flex-col md:flex-row-reverse flex-nowrap justify-between items-start">
     <div class="w-full md:w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
         <app-breadcrumb [items]="breadCrumbItems" />
+        <div class="w-full flex justify-between items-center gap-2">
+            <button class="flex justify-center items-center text-sm transition text-dark-text dark:text-light-text duration-300 ease-out gap-2 h-12 hover:cursor-pointer rounded-semi px-2 border-transparent bg-neutral-50 dark:bg-neutral-700 border hover:border-light-text2 hover:dark:border-dark-text2">
+                <i class="bi bi-share-fill"></i>
+                اشتراک
+            </button>
+            <div class="relative w-full sm:w-[50%] ">
+                <div class="relative text-xs sm:text-sm leading-5 h-12">
+                    <svg
+                        viewBox="0 -0.24 28.423 28.423" class="absolute right-0 top-1/2 -translate-1/2 w-5 h-5 fill-light-text2 dark:fill-dark-text2" xmlns="http://www.w3.org/2000/svg">
+                        <path id="Path_215" data-name="Path 215" d="M14.953,2.547A12.643,12.643,0,1,0,27.6,15.19,12.649,12.649,0,0,0,14.953,2.547Zm0,2A10.643,10.643,0,1,1,4.31,15.19,10.648,10.648,0,0,1,14.953,4.547Z" transform="translate(-2.31 -2.547)" fill-rule="evenodd"/>
+                        <path id="Path_216" data-name="Path 216" d="M30.441,28.789l-6.276-6.276a1,1,0,1,0-1.414,1.414L29.027,30.2a1,1,0,1,0,1.414-1.414Z" transform="translate(-2.31 -2.547)" fill-rule="evenodd"/>
+                    </svg>
+                    <input
+                        #searchInput type="text" id="searchInput" name="searchInput"
+                        (focus)="inputFocus($event)" (blur)="inputBlur($event)"
+                        (input)="filterList($event)"
+                        class="rtl transition duration-300 ease-out pl-[0.8rem] peer pr-[2.7rem] rounded-semi outline-none border-transparent bg-neutral-50 dark:bg-neutral-700 border focus:border-green-btn hover:not-focus:border-light-text2 hover:not-focus:dark:border-dark-text2 h-full text-dark-text dark:text-light-text w-full text-right select-none"
+                        autocomplete="off"
+                        placeholder=" "
+                    >
+                    <i class="bi bi-x-circle-fill peer-[:not(:placeholder-shown)]:flex hidden hover:cursor-pointer text-light-text2 dark:text-dark-text2 absolute top-1/2 -translate-y-1/2 left-4"></i>
+                    <p class="absolute text-light-text2 dark:text-dark-text2 top-1/2 -translate-y-1/2 right-[2.7rem] pointer-events-none peer-[:not(:placeholder-shown)]:hidden">عنوان را در {{currencyItem?.faGroupName}} جستجو کنید</p>
+                </div>
+                
+                <div #itemList class="absolute scroll-hide overflow-scroll hidden w-full z-[2] max-h-70 flex-col top-12 rounded-semi bg-neutral-50 dark:bg-neutral-700">
+                    @for (item of currentFilteredList; track item.id) {
+                        <app-search-item />
+                    }
+                </div>
+            </div>
+        </div>
         <app-item-info class="w-full" [item]="currencyItem" />
     </div>
 
+    <!-- 
+    (input)="filterList($event)" (focusout)="inputMouseEnter($event)"
+                (mouseenter)="inputMouseEnter($event)" (mouseleave)="inputMouseLeave($event)" -->
     <div class="w-full md:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
         <div>
             
