--- a/src/app/components/not-shared/currency-item-details/search-item/search-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/search-item/search-item.component.html
@@ -1,1 +1,4 @@
-<p class="bg-amber-400">search-item works!</p>
+<div (click)="onSelectItem()" class="flex items-center justify-end gap-2 hover:cursor-pointer">
+    <p class="text-sm text-dark-text text-right dark:text-light-text">{{item?.title}}</p>
+    <img class="rounded-full object-cover w-8 h-8" src={{item?.img}} alt={{item?.title}}>
+</div>
