--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="fixed z-[3] bg-light dark:bg-dark w-full h-16 flex items-center justify-start border-b border-b-light-border dark:border-b-dark-border">
+<header class="fixed z-[3] bg-light2 dark:bg-dark2 w-full h-16 flex items-center justify-start border-b border-b-light-border dark:border-b-dark-border">
     <div class="w-6 h-6 cursor-pointer flex justify-center items-center" (click)="changeTheme()">
         <svg
             *ngIf="themeService.getStringTheme() === 'light'"
