--- a/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
+++ b/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
@@ -1,12 +1,20 @@
 <div class="my-6 leading-[180%] flex-1 flex w-full px-4 py-3 bg-light-hover dark:bg-dark-text rounded-lg">
     
     
-    <div>
-        
+    <div class="flex flex-col flex-1">
+        <div class="flex flex-nowrap leading-[180%]">
+            <p>تومان</p>
+            <p>{{item?.tomanStringPrice}}</p>
+
+        </div>
+
+        <div class="flex flex-nowrap leading-[180%]">
+
+        </div>
     </div>
 
     <div class="flex flex-col justify-center">
-        <h1 class="text-xl dark:text-white text-dark-text mr-1 leading-[180%]">{{item?.title}}</h1>
+        <h1 class="text-xl dark:text-white text-right text-dark-text mr-1 leading-[180%]">{{item?.title}}</h1>
         <div class="flex justify-end mt-2 leading-[180%]">
             <p class="text-xl dark:text-light-text4 text-dark-text4">{{item?.shortedName}}</p>
             <span *ngIf="item?.isFav" class="w-6 h-6 cursor-pointer ml-1" (click)="removeFromFav($event)">
