--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -16,7 +16,7 @@
                     <input
                         #searchInput type="text" id="searchInput" name="searchInput"
                         (focus)="inputFocus()"
-                        [class.hidden]="!isPanelOpen"
+                        [class.flex]="!isPanelOpen"
                         (input)="filterList($event)"
                         class="rtl transition duration-300 ease-out pl-[0.8rem] peer pr-[2.7rem] rounded-semi outline-none border-transparent bg-neutral-50 dark:bg-neutral-700 border focus:border-green-btn hover:not-focus:border-light-text2 hover:not-focus:dark:border-dark-text2 h-full text-dark-text dark:text-light-text w-full text-right select-none"
                         autocomplete="off"
