--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -16,7 +16,6 @@
                     <input
                         #searchInput type="text" id="searchInput" name="searchInput"
                         (focus)="inputFocus()"
-                        [class.flex]="!isPanelOpen"
                         (input)="filterList($event)"
                         class="rtl transition duration-300 ease-out pl-[0.8rem] peer pr-[2.7rem] rounded-semi outline-none border-transparent bg-neutral-50 dark:bg-neutral-700 border focus:border-green-btn hover:not-focus:border-light-text2 hover:not-focus:dark:border-dark-text2 h-full text-dark-text dark:text-light-text w-full text-right select-none"
                         autocomplete="off"
@@ -26,7 +25,8 @@
                     <p class="absolute text-light-text2 dark:text-dark-text2 top-1/2 -translate-y-1/2 right-[2.7rem] pointer-events-none peer-[:not(:placeholder-shown)]:hidden">عنوان را در {{currencyItem?.faGroupName}} جستجو کنید</p>
                 </div>
                 
-                <div #itemList class="absolute overflow-hidden p-5 hidden w-full z-[2] max-h-86 flex-col top-12 rounded-semi bg-neutral-50 dark:bg-neutral-700">
+                <div
+                [class.hidden]="!isPanelOpen" #itemList class="absolute overflow-hidden p-5 hidden w-full z-[2] max-h-86 flex-col top-12 rounded-semi bg-neutral-50 dark:bg-neutral-700">
                     <div class="flex flex-col scroll-hide overflow-y-scroll gap-4">
                         @for (currentItem of currentFilteredList; track currentItem.id) {
                             <app-search-item (itemSelected)="onItemSelect($event)" [item]="currentItem" />
