--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -26,7 +26,7 @@
                 </div>
                 
                 <div
-                    #itemList [style.display]="listDisplay()" class="absolute overflow-hidden p-5 hidden w-full z-[2] max-h-86 flex-col top-12 rounded-semi bg-neutral-50 dark:bg-neutral-700">
+                    #itemList [style.display]="listDisplay" class="absolute overflow-hidden p-5 hidden w-full z-[2] max-h-86 flex-col top-12 rounded-semi bg-neutral-50 dark:bg-neutral-700">
                     <div class="flex flex-col scroll-hide overflow-y-scroll gap-4">
                         @for (currentItem of currentFilteredList; track currentItem.id) {
                             <app-search-item (itemSelected)="onItemSelect($event)" [item]="currentItem" />
