--- a/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
+++ b/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
@@ -1,5 +1,6 @@
 <div class="my-6 leading-[180%] flex-1 justify-center md:justify-between flex w-full px-4 py-3 bg-light-hover dark:bg-dark-text rounded-lg">
     
+    <!-- Mobile -->
     <div class="flex md:hidden flex-col w-full">
         <div class="flex justify-between w-full">
             <div>
@@ -22,8 +23,30 @@
                 <img class="w-8 h-8 md:w-23 md:h-23 rounded-full object-cover ml-2" src={{item?.img}} alt={{item?.title}}>
             </div>
         </div>
+        <div class="flex mt-2 justify-between w-full">
+            <p class="font-normal text-sm leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
+            <div class="flex items-center">
+                <p class="dark:text-light-text4 text-dark-text4 text-2xs leading-[180%]">تومان</p>
+                <p class="dark:text-white text-dark text-sm font-normal leading-[180%] ml-1">{{item?.tomanStringPrice}}</p>
+            </div>
+        </div>
+        <div class="flex mt-2 justify-between w-full">
+            <p class="font-normal text-xs leading-[180%] {{(item?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.dollarChangeState === 'low') ? '-' : '+'}}{{item?.dollarChanges}}%</p>
+            <div class="flex items-center">
+                <p class="dark:text-light-text4 text-dark-text4 text-xs font-normal leading-[180%]">دلار</p>
+                <p class="dark:text-white text-dark leading-[180%] text-xs font-normal align-middle ml-1">{{item?.dollarStringPrice}}</p>
+            </div>
+        </div>
+        <div class="mt-2 justify-between w-full {{item?.unit === 'پوند' ? 'flex' : 'hidden'}}">
+            <p class="font-normal text-xs leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
+            <div class="flex items-center">
+                <p class="dark:text-light-text4 text-dark-text4 text-xs font-normal leading-[180%]">پوند</p>
+                <p class="dark:text-white text-dark leading-[180%] text-xs font-normal align-middle ml-1">{{item?.lastPriceInfo?.p}}</p>
+            </div>
+        </div>
     </div>
     
+    <!-- Desktop -->
     <div class="hidden md:flex flex-col justify-center">
         <div class="flex flex-nowrap leading-[180%] text-base font-medium">
             <p class="dark:text-white text-dark leading-[180%]">تومان</p>
@@ -31,11 +54,16 @@
             <p class="font-normal mx-4 leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
         </div>
 
-        <div class="flex flex-nowrap mt-3 leading-[180%] text-base font-medium">
+        <div class="flex flex-nowrap leading-[180%] text-base font-medium {{item?.unit === 'پوند' ? 'mt-2 items-center' : 'mt-3'}}">
             <p class="dark:text-light-text4 text-dark-text4 leading-[180%] text-xs align-middle">دلار</p>
             <p class="dark:text-white text-dark mx-4 leading-[180%] text-xs align-middle">{{item?.dollarStringPrice}}</p>
             <p class="font-normal mx-4 leading-[180%] {{(item?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.dollarChangeState === 'low') ? '-' : '+'}}{{item?.dollarChanges}}%</p>
 
+        </div>
+        <div class="flex-nowrap leading-[180%] text-base font-medium {{item?.unit === 'پوند' ? 'flex mt-1 items-center' : 'hidden'}}">
+            <p class="dark:text-light-text4 text-dark-text4 leading-[180%] text-xs align-middle">پوند</p>
+            <p class="dark:text-white text-dark mx-4 leading-[180%] text-xs align-middle">{{item?.lastPriceInfo?.p}}</p>
+            <p class="font-normal mx-4 leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
         </div>
     </div>
 
