--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,9 @@
 
     --light-border: #a7a9a8;
     --dark-border: #292a2a;
+    
+    --light-border2: #d8d8d8;
+    --dark-border2: #333;
 
     --light-hover: #f1f5f4;
     --dark-hover: #1b1b1b;
@@ -98,6 +101,9 @@
 
     --color-light-border: var(--light-border);
     --color-dark-border: var(--dark-border);
+    
+    --color-light-border2: var(--light-border2);
+    --color-dark-border2: var(--dark-border2);
 
     --color-light-hover: var(--light-hover);
     --color-dark-hover: var(--dark-hover);
@@ -151,6 +157,10 @@
 
     --leading-4.\5: 1.125rem;
     --radius-semi: 0.625rem;
+}
+
+@utility related-type-button {
+    @apply cursor-pointer rounded-lg flex items-center justify-center min-w-1/4 px-4 md:w-1/2 md:px-0 lg:w-auto lg:px-2 py-2 text-xs font-medium border border-light-text4 dark:border-dark-text4 
 }
 
 
