Related Item for currency details added

--- a/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
+++ b/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
@@ -1,10 +1,10 @@
 <div class="px-5 py-4 rounded-2xl md:border md:border-light-border2 md:dark:border-dark-border2 md:mt-28">
-    <p class="leading-[180%] dark:text-white text-dark text-xl md:text-base text-right mb-6">وضعیت ارزها در یک نگاه</p>
+    <p class="leading-[180%] dark:text-white text-dark text-xl md:text-base text-right mb-6">وضعیت {{relatedItems?.at(0)?.faGroupName}} در یک نگاه</p>
     <div class="flex justify-end items-center mb-8 gap-2">
         <button (click)="changeCurrentType(1)" class="related-type-button {{ currentType() === 1 ? 'border text-sorting-green-light dark:text-sorting-green-dark border-green-btn bg-white dark:bg-dark-border2' : 'dark:text-white text-light-text2' }}">پر ضررها</button>
         <button (click)="changeCurrentType(0)" class="related-type-button {{ currentType() === 0 ? 'border text-sorting-green-light dark:text-sorting-green-dark border-green-btn bg-white dark:bg-dark-border2' : 'dark:text-white text-light-text2' }}">پر سودها</button>
     </div>
-    <div >
+    <div class="flex flex-col gap-4 w-full">
         @for (item of currentList(); track item.id) {
             <app-related-item [item]="item" />
         }
