--- a/src/app/components/not-shared/home/currency-item/currency-item.component.html
+++ b/src/app/components/not-shared/home/currency-item/currency-item.component.html
@@ -26,8 +26,8 @@
     <div class="flex justify-end items-start gap-1.5 flex-1">
         <div class="flex flex-1 justify-end pl-0.5 mt-1">
             <div class="flex flex-col items-end justify-start">
-                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light rtl w-full text-2xs leading-3 sm:text-sm sm:leading-5 font-bold">{{currencyItem?.title}}</span>
-                <span class="text-dark order-1 sm:order-2 mb-1 sm:mt-1 ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs leading-4.5 md:text-sm md:leading-5">{{currencyItem?.shortedName}}</span>
+                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light rtl w-full text-2xs leading-3 sm:text-sm sm:leading-5 font-bold text-ellipsis line-clamp-1">{{currencyItem?.title}}</span>
+                <span class="text-dark order-1 sm:order-2 mb-1 sm:mt-1 ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs leading-4.5 md:text-sm md:leading-5 text-ellipsis line-clamp-1 {{currencyItem?.filterName === 'سکه در بورس' ? 'text-right rtl': ''}}">{{currencyItem?.shortedName}}</span>
             </div>
         </div>
         <div class="flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
