Related Items added

--- a/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
+++ b/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="flex flex-col gap-4 w-full">
         @for (item of currentList(); track item.id) {
-            <app-related-item [item]="item" />
+            <app-related-item class="w-full" [item]="item" [index]="$index" />
         }
     </div>
 </div>
