--- a/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
+++ b/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
@@ -80,9 +80,9 @@
 
     <div class="hidden md:flex justify-end items-center">
         <div class="flex flex-col justify-center">
-            <h1 class="text-xl dark:text-white text-right text-dark-text mr-1 leading-[180%]">{{item?.title}}</h1>
+            <h1 class="text-xl dark:text-white text-right rtl text-dark-text mr-1 text-ellipsis line-clamp-2 font-medium leading-[180%]">{{item?.title}}</h1>
             <div class="flex justify-end mt-2 leading-[180%]">
-                <p class="text-xl dark:text-light-text4 text-dark-text4 {{ item?.filterName === 'سکه در بورس' ? 'text-right rtl' : '' }}">{{item?.shortedName}}</p>
+                <p class="text-xl dark:text-light-text4 text-dark-text4 text-ellipsis line-clamp-1 {{ item?.filterName === 'سکه در بورس' ? 'text-right rtl' : '' }}">{{item?.shortedName}}</p>
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none" viewBox="0 0 24 24"
