--- a/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
@@ -1,8 +1,6 @@
-<!-- <p>{{item?.title}} {{item?.lastPriceInfo?.dp}}</p> -->
-
-<div class="md:pt-1 md:pb-2 md:pl-2 flex hover:cursor-pointer md:hover:bg-light-text3 rounded-lg md:hover:dark:bg-dark-text">
-    <div class="flex flex-1">
-        <div class="">
+<div class="w-full flex-1 px-3 md:px-0 md:pt-1 pb-2 md:pl-2 flex hover:cursor-pointer md:hover:bg-light-text3 md:rounded-lg md:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 md:border-b-0' : ''}}">
+    <div class="flex flex-1 h-full justify-between">
+        <div class="flex flex-col justify-between flex-1">
             @if (item?.faGroupName === 'بازارهای ارزی') {
                 <p class="font-normal text-sm leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
             }
@@ -10,7 +8,11 @@
                 <p class="font-normal text-sm leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
             }
         </div>
+        <div class="flex flex-col justify-between">
+            <p class="line-clamp-2 text-ellipsis text-dark dark:text-white text-right rtl md:text-xs">{{item?.title}}</p>
+            <p class="line-clamp-1 text-ellipsis text-dark-text2 dark:text-light-text2 text-right">{{item?.shortedName}}</p>
+        </div>
     </div>
-    <img class="w-11 h-11 rounded-full object-cover" src={{item?.img}} alt={{item?.title}}>
+    <img class="w-11 h-11 rounded-full object-cover ml-2.5" src={{item?.img}} alt={{item?.title}}>
     
 </div>
