Signal output on currency overview added

--- a/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
+++ b/src/app/components/not-shared/currency-item-details/currency-overview/currency-overview.component.html
@@ -5,7 +5,7 @@
         <div class="overflow-hidden flex flex-row-reverse mb-0 md:mb-3">
             @for (currency of supportedCurrencies; track currency.id) {
                 <div
-                    (click)="currentSupportCurrencyId.set(currency.id)"
+                    (click)="changeUnit(currency.id)"
                     class="border {{ currency.id === 0 ? (currency.id === currentSupportCurrencyId() ? 'border-green-btn rounded-r-semi' : 'border-l-0 rounded-r-semi border-dark-text2 dark:border-light-text2') : (currency.id === currentSupportCurrencyId() ? 'border-green-btn rounded-l-semi' : 'border-r-0 rounded-l-semi border-dark-text2 dark:border-light-text2') }} w-16 md:w-18 h-12 flex justify-center px-1 items-center cursor-pointer">
                     <p class="rtl {{ currency.id === currentSupportCurrencyId() ? 'text-dark dark:text-light' : 'text-dark-text2 dark:text-light-text2' }} text-2xs sm:text-xs">{{currency.title}}</p>
                 </div>
